--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "todolist-backend"
+name = "demeter-backend"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "todolist-backend"
+name = "demeter"
 path = "src/main.rs"
 
 [[bin]]
